--- a/Assets/AppData/Scripts/App.asmdef
+++ b/Assets/AppData/Scripts/App.asmdef
@@ -2,7 +2,9 @@
     "name": "App",
     "references": [
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:9e24947de15b9834991c9d8411ea37cf"
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:159e1322909aa9442bba825c15c16014"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
